RESOLVED FIXED91216
[GTK] WebKitWebView::mouse-target-changed is not emitted when moved to/from edtiable content
https://bugs.webkit.org/show_bug.cgi?id=91216
Summary [GTK] WebKitWebView::mouse-target-changed is not emitted when moved to/from e...
Carlos Garcia Campos
Reported 2012-07-13 04:20:06 PDT
The problem is that the function to check whether two hit test results are equal doesn't check the editable flag.
Attachments
Patch (1.90 KB, patch)
2012-07-13 04:21 PDT, Carlos Garcia Campos
xan.lopez: review+
Carlos Garcia Campos
Comment 1 2012-07-13 04:21:49 PDT
WebKit Review Bot
Comment 2 2012-07-13 04:23:55 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Xan Lopez
Comment 3 2012-07-13 04:30:06 PDT
Comment on attachment 152214 [details] Patch Looks good.
Carlos Garcia Campos
Comment 4 2012-07-13 04:44:33 PDT
Note You need to log in before you can comment on or make changes to this bug.