[GTK] WebKitWebView::mouse-target-changed is not emitted when moved to/from edtiable content https://bugs.webkit.org/show_bug.cgi?id=91216

Reviewed by Xan Lopez.

The problem is that the function to check whether two hit test
results are equal doesn't check the editable flag.

* UIProcess/API/gtk/WebKitHitTestResult.cpp:
(webkitHitTestResultCompare): Check also the editable flag.

Canonical link: https://commits.webkit.org/109038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122565 268f45cc-cd09-0410-ab3c-d52691b4dbfc